# basic

./: CMakeLists.txt  vcpkg.json
cmake/: config.cmake.in
include/: basic.h
src/: basic.cpp
